alteraçao no indexhtml na imaem

--- a/index4.html
+++ b/index4.html
@@ -18,7 +18,7 @@
         <button class="button-login"> LOGIN</button>
     </header>
     <main>
-        <img src="./img/we-care.png" alt="we-care-logo" class="img-logo">
+        <img src="./asset/we-care.png" alt="we-care-logo" class="img-logo">
         <section>
         <h1>WE CARE</h1>
         <h2>About Your Pet</h2>
